--- a/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloWorld-form.html
+++ b/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloWorld-form.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 
-<form th:action="@{/processForm}" method="GET">
+<form th:action="@{/processFormVersionThree}" method="GET">
     <input th:type="text" name="studentName"
             placeholder="What's your name?">
     <input type = "submit">
