--- a/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
+++ b/06-spring-boot-spring-mvc/01-thymeleafdemo-helloworld/src/main/resources/templates/helloworld.html
@@ -11,6 +11,10 @@ Hello World of Spring!
 
 Student Name: <span th:text="${param.studentName}" />
 
+<br><br>
+
+The message: <span th:text="${message}" />
+
 </body>
 
 </html>
