--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
@@ -6,9 +6,14 @@
 </head>
 <body>
 
-<h3>Student Registration Form</h3>
+<h3>Student Confirmation</h3>
 
 The Student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}" />
+
+<br>
+
+Country: <span th:text="${student.country}" />
+
 
 </body>
 </html>
