--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
@@ -14,6 +14,9 @@ The Student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.
 
 Country: <span th:text="${student.country}" />
 
+<br>
+
+Favorite language: <span th:text="${student.favoriteLanguage}" />
 
 </body>
 </html>
