--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:th="http://www.thymeleaf.org" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <title>Student Form</title>
@@ -23,6 +23,15 @@
         <option th:each="tempCountry : ${countries}" th:value="${tempCountry}"
                 th:text=" ${tempCountry}" />
     </select>
+
+    <br><br>
+
+    Favorite Programming Language:
+
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+
 
     <br><br>
 
