--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-confirmation.html
@@ -10,13 +10,21 @@
 
 The Student is confirmed: <span th:text="${student.firstName} + ' ' + ${student.lastName}" />
 
-<br>
+<br><br>
 
 Country: <span th:text="${student.country}" />
 
-<br>
+<br><br>
 
 Favorite language: <span th:text="${student.favoriteLanguage}" />
+
+<br><br>
+Favorite Operating Systems:
+
+<ul>
+    <li th:each="tempSystem : ${student.favoriteSystems}" th:text="${tempSystem}"></li>
+</ul>
+
 
 </body>
 </html>
