--- a/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-form.html
+++ b/06-spring-boot-spring-mvc/03-data-binding/src/main/resources/templates/student-form.html
@@ -28,10 +28,28 @@
 
     Favorite Programming Language:
 
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
+    <!-- <input type="radio" th:field="*{favoriteLanguage}" th:value="Go">Go</input>
     <input type="radio" th:field="*{favoriteLanguage}" th:value="Java">Java</input>
-    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input>
+    <input type="radio" th:field="*{favoriteLanguage}" th:value="Python">Python</input> -->
 
+    <input type="radio" th:field="*{favoriteLanguage}"
+                        th:each="tempLang : ${languages}"
+                        th:value="${tempLang}"
+                        th:text="${tempLang}" />
+
+    <br><br>
+
+    Favorite Operating System:
+    <!-- <input type="checkbox" th:field="*{favoriteSystems}" th:value="Linux">Linux</input>
+    th:value="MacOS">MacOS</input>
+    <input type="checkbox" th:field="*{favoriteSystems}" th:value="'Microsoft Windows'">Microsoft Windows</input>
+     -->
+
+    <input type="checkbox" th:field="*{favoriteSystems}"
+                           th:each="tempSystem : ${systems}"
+                           th:value="${tempSystem}"
+                           th:text="${tempSystem}" />
+    
 
     <br><br>
 
