--- a/06-spring-boot-spring-mvc/04-validation-demo/src/main/resources/templates/customer-confirmation.html
+++ b/06-spring-boot-spring-mvc/04-validation-demo/src/main/resources/templates/customer-confirmation.html
@@ -10,6 +10,10 @@
         <br><br>
 
         Free Passes: <span th:text="${customer.freePasses}" />
+
+        <br><br>
+
+        Postal Code: <span th:text="${customer.postalCode}" />
     </body>
 
 </head>
