--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/employee-form.html
@@ -16,6 +16,9 @@
         <form action="#" th:action="@{/employees/save}"
                     th:object="${employee}" method="POST">
 
+            <!-- Add a hidden field to handle form update -->
+            <input type = "hidden" th:field="*{id}">
+            
             <input type="text" th:field="*{firstName}"
                 class="form-control mb-4 w-25" placeholder="First name">
 
