--- a/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
+++ b/07-spring-boot-spring-mvc-crud/00-spring-boot-spring-mvc-crud-starter-code/src/main/resources/templates/employees/list-employees.html
@@ -26,6 +26,7 @@
                 <th>First Name</th>
                 <th>Last Name</th>
                 <th>Email</th>
+                <th>Action</th>
             </tr>
         </thead>
 
@@ -34,6 +35,19 @@
                 <td th:text="${tempEmployee.firstName}"></td>
                 <td th:text="${tempEmployee.lastName}"></td>
                 <td th:text="${tempEmployee.email}"></td>
+                <!-- Add Update/Delete button-->
+                <td>
+                    <a th:href="@{/employees/showFormForUpdate(employeeId=${tempEmployee.id})}"
+                    class="btn btn-info btn-sm">
+                        Update
+                    </a>
+                    <a th:href="@{/employees/delete(employeeId=${tempEmployee.id})}"
+                    class="btn btn-danger btn-sm"
+                        onclick="if (! (confirm('Are you sure you want to delete this employee?'))) return false">
+
+                        Delete
+                    </a>
+                </td>
             </tr>
         </tbody>
     </table>
