--- a/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mv-security-default/src/main/resources/templates/home.html
+++ b/08-spring-boot-spring-mvc-security/01-spring-boot-spring-mv-security-default/src/main/resources/templates/home.html
@@ -7,7 +7,14 @@
     </head>
         <h1>Anjori Arts Home Page</h1>
         <hr>
-        <h2>Welcome to Anjori Arts!!</h2>
+        <p>
+            Welcome to Anjori Arts!!
+        </p>
+        
+        <!--Add a Logout button-->
+        <form action="#" th:action="@{/logout}" method="POST">
+            <input type="submit" value="Logout" />
+        </form>
 
     </body>
 </html>
